# POD-Automator

./: .gitignore  CONTRIBUTING.md  KB_QUICK_START.docx  KB_QUICK_START.md  POD_Automator_Proctor_Guide.docx  PseudocoBranches_Config-Group-Template.csv  README.md  RESUME.md  dashboard.py  docker-compose.yml  duo_automation.py  evpn_fabric.py  generate_lab_cards.py  ise_integrations.py  kb.py  kb_seed.py  kb_sync.py  lab_adventure.py  onboard.py  onboard_router.py  pod_automator.py  pods.example.csv  pyproject.toml  record_har.py  refresh_scc_sessions.py  requirements.txt  reset_switches.py  run_dashboard.sh  sda_fabric.py  setup_lab_adventure.sh  tftp_server.py  update.sh
appliance/: GETTING-STARTED.md  install.sh
appliance/packer/: .gitignore  pod-automator.pkr.hcl
appliance/packer/http/: user-data
base_configs/: border_spine.txt  branch_sec_rtr.txt  leaf1.txt  leaf2.txt
data/scc_keys/: scc_keys_507.json  scc_keys_523.json
docker/: Dockerfile  compose-template.yml  generate.py  launch.sh  status.sh  stop.sh  vpn-entrypoint.sh
scripts/: git-update.sh  pod-automator-updater.service  pod-automator-updater.timer  pod-automator.service  ubuntu-setup.sh
