[project]
name = "pod-automator"
version = "1.0.0"
description = "Cisco SD-WAN Router Onboarding Automation — dashboard, pipeline, and multi-POD parallel launcher"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "flask>=3.1",
    "paramiko>=3.0",
    "reportlab>=4.5.1",
    "ncclient>=0.6",
    "requests>=2.31",
    "urllib3>=2.0",
    "sentence-transformers>=3.0",
    "ollama>=0.3",
    "numpy>=1.26",
    "pywinrm>=0.4",
    "ldap3>=2.9",
    "netmiko>=4.3",
    "playwright>=1.40",
]
